--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+body {
+    background: #111;
+    text-align: center;
+}
 #canvas1 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
-    height: 400px;
-    border: 2px solid black;
+    border: 2px solid #ffffff;
+    background-color: #141b23;
+
 }
